--- a/styles/components/Releases.module.scss
+++ b/styles/components/Releases.module.scss
@@ -27,6 +27,8 @@
     align-items: center;
     img {
       border-radius: 5px;
+      width: 300px;
+      height: auto;
     }
   }
   
